--- a/layouts/shortcodes/signature_animation.html
+++ b/layouts/shortcodes/signature_animation.html
@@ -1,13 +1,6 @@
-{{ "<!-- Signature animation + rapid logo (Onyx-style) -->" | safeHTML }}
+{{ "<!-- Signature animation strip (now page) -->" | safeHTML }}
 {{ $logos := slice "wheel" "enso" "mountain" "book" "signal" }}
 <div class="signature-animation" aria-hidden="true">
-  <div class="rapid-logo">
-    <div class="rapid-logo-slot">
-      {{ range $logos }}
-      <span class="rapid-logo-item" aria-hidden="true">{{ readFile (printf "static/signature/%s.svg" .) | safeHTML }}</span>
-      {{ end }}
-    </div>
-  </div>
   <div class="signature-animation-strip">
     {{ range $logos }}
     <span class="signature-animation-item">{{ readFile (printf "static/signature/%s.svg" .) | safeHTML }}</span>
